# GLModelViewer

./: .gitignore  .gitmodules  CMakeLists.txt  Camera.h  InstanceManager.cpp  InstanceManager.h  MeshReader.cpp  MeshReader.h  Object.cpp  Object.h  Quaternion.h  README.md  fshader.frag  main.cpp  sync.sh  system.cpp  system.h  textfile.cpp  textfile.h  vshader.vert
include/: InstanceManager.h  MeshReader.h  Shader.h
shaders/: cube.frag  cube.vert  cube_uniform_color.vert  fshader.frag  gaussian.frag  gaussian.geo  gaussian.vert  multi_radixsort.comp  multi_radixsort_histogram.comp  presort.comp  vshader.vert
src/: main.cpp
src/core/: Application.cpp  Application.h  Camera.cpp  Camera.h  InputHandler.cpp  InputHandler.h  WindowManager.cpp  WindowManager.h
src/data_processing/: CameraDataLoader.cpp  CameraDataLoader.h  CameraInfo.cpp  CameraInfo.h  DataLoader.cpp  DataLoader.h  Dataset.h  MeshReader.cpp  MeshReader.h  SplatData.cpp  SplatData.h  SplatReader.h
src/gui/: ImGuiLayer.cpp  ImGuiLayer.h  LayoutManager.cpp  LayoutManager.h  SceneWindow.cpp  SceneWindow.h  TrainPathWindow.cpp  TrainPathWindow.h
src/rendering/: CubeRenderer.cpp  CubeRenderer.h  GaussianRenderer.cpp  GaussianRenderer.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h
src/utils/: Angel.h  utils.cpp  utils.h
src/visualization/: GaussianVisualizer.cpp  GaussianVisualizer.h  ParameterEditor.cpp  ParameterEditor.h
tests/: test_imgui.cpp  test_meshreader.cpp  test_plyread.cpp  test_readcamera.cpp
